// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-script should handle non-existent script 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The script could not be found","status":404,"detail":"The script was not found.","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-script should update a script 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
